syntax = "proto3";
option go_package = "./;pb";

import "google/protobuf/timestamp.proto";

message Notice{
  int64 id = 1;
  string title = 2;
  google.protobuf.Timestamp create_at = 3;
  string content = 4;
  int32 status = 5;
  int64 create_by = 6;
}